fixed tarea2 check

--- a/taller_2/index.html
+++ b/taller_2/index.html
@@ -23,60 +23,56 @@
     </header>
 
     <main>
-        <section id="solar">
-            <!-- ÍCONO FLOTANTE (Position Absolute) -->
-            <div class="floating-icon">☀️</div>
-            <div class="container">
-                <div class="content">
-                    <h2>Energía Solar</h2>
-                    <p>La energía solar es una fuente de energía renovable que proviene del sol.</p>
-                    <div class="card">
-                        <p>Descubre más sobre la energía solar</p>
-                        <button class="cta-button">Explorar</button>
+        <div class="sections">
+            <section id="solar">
+                <div class="floating-icon">☀️</div>
+                <div class="container">
+                    <div class="content">
+                        <h2>Energía Solar</h2>
+                        <p>La energía solar es una fuente de energía renovable que proviene del sol.</p>
+                        <div class="image">
+                            <img src="assets/imgs/solar-panels.jpg" alt="Paneles Solares">
+                        </div>
+                        <div class="card">
+                            <p>Descubre más sobre la energía solar</p>
+                            <button class="cta-button">Explorar</button>
+                        </div>
                     </div>
                 </div>
-
-                <div class="image">
-                    <img src="assets/imgs/solar-panels.jpg" alt="Paneles Solares">
-                </div>
-            </div>
-        </section>
-        <section id="eolica">
-            <!-- ÍCONO FLOTANTE (Position Absolute) -->
-            <div class="floating-icon">🌬️</div>
-            <div class="container">
-                <div class="content">
-                    <h2>Energía Eólica</h2>
-                    <p>La energía eólica se obtiene del viento y es ampliamente utilizada.</p>
-                    <div class="card">
-                        <p>Descubre más sobre la energía eólica</p>
-                        <button class="cta-button">Explorar</button>
+            </section>
+            <section id="eolica">
+                <div class="floating-icon">🌬️</div>
+                <div class="container">
+                    <div class="content">
+                        <h2>Energía Eólica</h2>
+                        <p>La energía eólica se obtiene del viento y es ampliamente utilizada.</p>
+                        <div class="image">
+                            <img src="assets/imgs/eolica.jpg" alt="Tubinas Eólicas">
+                        </div>
+                        <div class="card">
+                            <p>Descubre más sobre la energía eólica</p>
+                            <button class="cta-button">Explorar</button>
+                        </div>
                     </div>
                 </div>
-
-                <div class="image">
-                    <img src="assets/imgs/eolica.jpg" alt="Tubinas Eólicas">
-                </div>
-            </div>
-        </section>
-        <section id="hidraulica">
-            <!-- ÍCONO FLOTANTE (Position Absolute) -->
-            <div class="floating-icon">💧</div>
-            <div class="container">
-                <div class="content">
-                    <h2>Energía Hidráulica</h2>
-                    <p>La energía hidráulica aprovecha la fuerza del agua en movimiento.</p>
-                    <div class="card">
-                        <p>Descubre más sobre la energía hidráulica</p>
-                        <button class="cta-button">Explorar</button>
+            </section>
+            <section id="hidraulica">
+                <div class="floating-icon">💧</div>
+                <div class="container">
+                    <div class="content">
+                        <h2>Energía Hidráulica</h2>
+                        <p>La energía hidráulica aprovecha la fuerza del agua en movimiento.</p>
+                        <div class="image">
+                            <img src="assets/imgs/hidraulica.jpg" alt="Planta Hidráulica">
+                        </div>
+                        <div class="card">
+                            <p>Descubre más sobre la energía hidráulica</p>
+                            <button class="cta-button">Explorar</button>
+                        </div>
                     </div>
                 </div>
-                
-                <div class="image">
-                    <img src="assets/imgs/hidraulica.jpg" alt="Planta Hidráulica">
-                </div>
-            </div>
-        </section>
+            </section>
+        </div>
     </main>
 
     <footer>
