--- a/taller_3/index.html
+++ b/taller_3/index.html
@@ -54,7 +54,7 @@
             <hr>
 
             <section id="registro">
-
+                <h3>Formulario de Registro</h3>
             </section>
             <hr>
 
