--- a/taller_3/index.html
+++ b/taller_3/index.html
@@ -99,7 +99,7 @@
                     <input type="date" class="fecha2" />
                 </div>
 
-                <button id="btn-calcular">Calcular Diferencia</button>
+                <button id="btn_calcular">Calcular Diferencia</button>
 
                 <p>Días de diferencia: <span id="resultadoFechas">---</span></p>
 
